--- a/style.css
+++ b/style.css
@@ -370,7 +370,7 @@ nav .fa-solid{
         user-select: none;
     }
 	#contain{
-	width: 50vw;
+	width: 80%;
 	height: 100pt;
 }
     .header-text{
