--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', cursive;
+    font-family: 'Times New Roman', serif;
     box-sizing: border-box;
 }
 html{
-     scroll-behavior: smooth;
+    scroll-behavior: smooth;
 }
 body{
     background: #080808;
@@ -22,11 +22,11 @@ body{
     padding: 10px 10%;
 }
 #contain{
-    position: absolute;
+    position: relative;
     margin: auto;
 	width: 80vw;
 	height: 100pt;
-	top: 0;
+	margin-top: 25%;
 	bottom: 0;
     filter: url(#threshold) blur(0.6px);
 }
@@ -54,7 +54,7 @@ nav ul li{
 nav ul li a{
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 22px;
     position: relative;
 }
 nav ul li a::after{
@@ -71,45 +71,16 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 20%;
+    margin-top: 10px;
     font-size: 30px;
 }
 .header-text h1{
     font-size: 60px;
     margin-top: 20px;
 }
-.text-container {
-    block-size: min(10rem, 23vw);
-    min-inline-size: 22.5rem;
-}
-.text-stroke {
-    font-size: 60px;
-    letter-spacing: 4px;
-    fill: none;
-    stroke: #ff004f;
-    stroke-width: 2;
-    stroke-dasharray: 100%;
-    stroke-dashoffset: 100%;
-    animation: textStrokeAnim 4000ms linear both;
-    animation-iteration-count: 1;
-}
-@keyframes textStrokeAnim {
-    0% {
-        stroke-dasharray: 100%;
-        stroke-dashoffset: 100%;
-        fill: #0000;
-    }
-    95% {
-        stroke-dasharray: 0%;
-        stroke-dashoffset: 90%;
-        fill: #0000;
-    }
-    100% {
-        stroke-dasharray: 0%;
-        stroke-dashoffset: 0%;
-        fill: #ff004f;
-        filter: drop-shadow(2px 2px 10px #0007);
-    }
+.header-text span{
+    color: #ff004f;
+    font-family: 'Poppins', sans-serif;
 }
 /*-----About----*/
 #about{
@@ -362,8 +333,15 @@ nav .fa-solid{
     #header{
         background-image: url(images/phone-background.png);
     }
+    #text1, #text2 {
+        position: realtive;
+        width: 10%;
+        display: inline-block;
+        font-size: 30pt;
+        user-select: none;
+    }
     .header-text{
-        margin-top: 125%;
+        margin-top: 40%;
         font-size: 16px;
     }
     .header-text h1{
@@ -415,6 +393,9 @@ nav .fa-solid{
     }
     .copyright{
         font-size: 14px;
+    }
+    #contain{
+        margin-top: 50%;
     }
 }
 #msg{
