--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ nav ul li a:hover::after{
     color: #ff004f;
     font-family: 'Poppins', sans-serif;
 }
-/*-----About----*/
+/*About*/
 #about{
     padding: 80px 0;
     color: #ababab;
