--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body{
     margin: auto;
 	width: 80vw;
 	height: 100pt;
-	margin-top: 25%;
+	margin-top: 35%;
 	bottom: 0;
     filter: url(#threshold) blur(0.6px);
 }
@@ -79,8 +79,10 @@ nav ul li a:hover::after{
     margin-top: 20px;
 }
 .header-text span{
-    color: #ff004f;
-    font-family: 'Poppins', sans-serif;
+    color: #fff;
+    background-color: rgba(204, 0, 0, 0.7);
+    border-radius: 10px;
+    padding: 1px 5px;
 }
 /*-----About----*/
 #about{
@@ -137,7 +139,7 @@ nav ul li a:hover::after{
 }
 .tab-contents ul li span{
     color: #b54769;
-    font-size:14px;
+    font-size: 14px;
 }
 .tab-contents{
     display: none;
@@ -337,18 +339,13 @@ nav .fa-solid{
         background-image: url(images/phone-background.png);
     }
 	#text1, #text2 {
-        position: realtive;
         width: 10%;
         display: inline-block;
         font-size: 30pt;
         user-select: none;
     }
-	#contain{
-	width: 80%;
-	height: 100pt;
-    }
     .header-text{
-        margin-top: 40%;
+        margin-top: 25%;
         font-size: 16px;
     }
     .header-text h1{
@@ -402,6 +399,13 @@ nav .fa-solid{
         font-size: 14px;
     }
     #contain{
+        width: 80%;
+        height: 100pt;
         margin-top: 50%;
+    }
+    #text1, #text2{
+        background-color: rgba(204, 0, 0, 0.7);
+        border-radius: 10px;
+        width: auto;
     }
 }
