--- a/style.css
+++ b/style.css
@@ -26,16 +26,19 @@ body{
     margin: auto;
 	width: 80vw;
 	height: 100pt;
-	margin-top: 35%;
+	margin-top: 15%;
 	bottom: 0;
     filter: url(#threshold) blur(0.6px);
 }
 #text1, #text2 {
 	position: absolute;
 	width: 100%;
+    text-align: center;
 	display: inline-block;
 	font-size: 50pt;
 	user-select: none;
+    background-color: rgba(204, 0, 0, 0.5);
+    border-radius: 10px;
 }
 nav{
     display: flex;
@@ -71,8 +74,9 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header-text{
-    margin-top: 10px;
+    margin-top: 10%;
     font-size: 30px;
+    text-align: center;
 }
 .header-text h1{
     font-size: 60px;
@@ -80,7 +84,7 @@ nav ul li a:hover::after{
 }
 .header-text span{
     color: #fff;
-    background-color: rgba(204, 0, 0, 0.7);
+    background-color: rgba(204, 0, 0, 0.5);
     border-radius: 10px;
     padding: 1px 5px;
 }
@@ -404,7 +408,7 @@ nav .fa-solid{
         margin-top: 50%;
     }
     #text1, #text2{
-        background-color: rgba(204, 0, 0, 0.7);
+        background-color: rgba(204, 0, 0, 0.5);
         border-radius: 10px;
         width: auto;
     }
