--- a/style.css
+++ b/style.css
@@ -11,6 +11,14 @@ body{
     background: #080808;
     color: #fff;
 }
+#preloader{
+    background: #000 url(images/preloader.gif) no-repeat center center;
+    background-size: 15%;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
 #header{
     width: 100%;
     height: 100vh;
@@ -22,18 +30,18 @@ body{
     padding: 10px 10%;
 }
 #contain{
-    	position: relative;
-    	margin: auto;
+    position: relative;
+	margin: auto;
 	width: 80vw;
 	height: 100pt;
 	margin-top: 15%;
 	bottom: 0;
-    	filter: url(#threshold) blur(0.6px);
+	filter: url(#threshold) blur(0.6px);
 }
 #text1, #text2 {
 	position: absolute;
 	width: 100%;
-    	text-align: center;
+	text-align: center;
 	display: inline-block;
 	font-size: 50pt;
 	user-select: none;
@@ -207,6 +215,7 @@ nav ul li a:hover::after{
 }
 .work img{
     width: 100%;
+    height: 100%;
     border-radius: 10px;
     display: block;
     transition: transform 0.5s;
