--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ nav ul li a:hover::after{
     display: inline-block;
 }
 .hobbies-list div:hover{
-    background: #ff004f;
+    background: #ababab;
     transform: translateY(-10px);
 }
 /*work*/
@@ -225,7 +225,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #ababab);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -381,7 +381,7 @@ nav .fa-solid{
     }
     nav ul li{
         display: block;
-    	margin: 25px;
+        margin: 25px;
     }
     nav ul .fa-solid{
         position: absolute;
@@ -391,6 +391,9 @@ nav .fa-solid{
     }
     .sub-title{
         font-size: 40px;
+    }
+    .layer{
+        height: 100%;
     }
     .about-col-1, .about-col-2{
         flex-basis: 100%;
