--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', serif;
+    font-family: "Roboto", sans-serif;
     box-sizing: border-box;
 }
 html{
@@ -262,26 +262,9 @@ nav ul li a:hover::after{
 .work:hover .layer{
     height: 100%;
 }
-.btn{
-    display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #ff004f;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    transition: background 0.5s;
-}
-.btn:hover{
-    background: #ff004f;
-}
 /*Contact*/
 .contact-left{
     flex-basis: 35%;
-}
-.contact-right{
-    flex-basis: 60%;
 }
 .contact-left p{
     margin-top: 30px;   
@@ -306,31 +289,6 @@ nav ul li a:hover::after{
     color: #ff004f;
     transform: translateY(-5px);
 }
-.btn.btn2{
-    display: inline-block;
-    background: #ff004f;
-}
-.contact-right form{
-    width: 100%;
-
-}
-form input, form textarea{
-    width: 100%;
-    border: 0;
-    outline: none;
-    background: #262626;
-    padding: 15px;
-    margin: 15px 0;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 6px;
-}
-form .btn2{
-    padding: 14px 60px;
-    font-size: 18px;
-    margin-top: 20px;
-    cursor: pointer;
-}
 .copyright{
     width: 100%;
     text-align: center;
@@ -351,8 +309,10 @@ nav .fa-solid{
     #header{
         background-image: url(images/phone-background.png);
     }
-	#text1, #text2 {
-        width: 10%;
+    #text1, #text2{
+        background-color: rgba(204, 0, 0, 0.5);
+        border-radius: 10px;
+        width: auto;
         display: inline-block;
         font-size: 30pt;
         user-select: none;
@@ -419,9 +379,5 @@ nav .fa-solid{
         height: 100pt;
         margin-top: 50%;
     }
-    #text1, #text2{
-        background-color: rgba(204, 0, 0, 0.5);
-        border-radius: 10px;
-        width: auto;
-    }
+    
 }
