--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(images/background.webp);
     background-size: cover;
     background-position: center;
 }
@@ -307,7 +307,7 @@ nav .fa-solid{
 }
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(images/phone-background.png);
+        background-image: url(images/phone-background.webp);
     }
     #text1, #text2{
         background-color: rgba(204, 0, 0, 0.5);
